learning_programs/i2c-display-example/build/log/idf_py_stderr_output_18638
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:11:19: error: 'I2C_CLK_SRC_DEFAUTLT' undeclared here (not in a function); did you mean 'I2C_CLK_SRC_DEFAULT'?
   11 |     .clk_source = I2C_CLK_SRC_DEFAUTLT,
      |                   ^~~~~~~~~~~~~~~~~~~~
      |                   I2C_CLK_SRC_DEFAULT
In file included from /home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:2:
/home/danny/esp-idf/components/esp_common/include/esp_err.h:115:28: error: expected identifier or '(' before 'do'
  115 | #define ESP_ERROR_CHECK(x) do {                                         \
      |                            ^~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:20:1: note: in expansion of macro 'ESP_ERROR_CHECK'
   20 | ESP_ERROR_CHECK(i2c_new_master_bus(&i2c_bus_config, &bus_handle));
      | ^~~~~~~~~~~~~~~
/home/danny/esp-idf/components/esp_common/include/esp_err.h:121:7: error: expected identifier or '(' before 'while'
  121 |     } while(0)
      |       ^~~~~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:20:1: note: in expansion of macro 'ESP_ERROR_CHECK'
   20 | ESP_ERROR_CHECK(i2c_new_master_bus(&i2c_bus_config, &bus_handle));
      | ^~~~~~~~~~~~~~~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:29:50: error: macro "ESP_ERROR_CHECK" passed 3 arguments, but takes just 1
   29 | ESP_ERROR_CHECK(bus_handle, &dev_cfg, &dev_handle);
      |                                                  ^
/home/danny/esp-idf/components/esp_common/include/esp_err.h:115:9: note: macro "ESP_ERROR_CHECK" defined here
  115 | #define ESP_ERROR_CHECK(x) do {                                         \
      |         ^~~~~~~~~~~~~~~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:29:1: warning: data definition has no type or storage class
   29 | ESP_ERROR_CHECK(bus_handle, &dev_cfg, &dev_handle);
      | ^~~~~~~~~~~~~~~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:29:1: error: type defaults to 'int' in declaration of 'ESP_ERROR_CHECK' [-Wimplicit-int]
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/i2c-display-example.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
